# system-mimalloc

./: Cargo.toml  LICENSE.md  README.md  SECURITY.md  build.rs  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
